# file-watcher

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: lib.rs
